--- a/Bdonor/app/src/main/AndroidManifest.xml
+++ b/Bdonor/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.WelcomeScreen" />
-        <activity android:name=".activities.MainScreen"></activity>
+        <activity android:name=".activities.MainScreen"
+
+            ></activity>
     </application>
 
 </manifest>
