--- a/Bdonor/app/src/main/AndroidManifest.xml
+++ b/Bdonor/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/NoAppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,9 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.WelcomeScreen" />
-        <activity android:name=".activities.MainScreen"
-
-            ></activity>
+        <activity android:name=".activities.LoginScreen" />
+        <activity android:name=".activities.HomeScreen"></activity>
     </application>
 
 </manifest>
